src/components/footer/Footer.css
/* Footer styles */
.footer {
    background-color: rgba(0, 0, 0, 0.7);
    color: #fff;
    text-align: center;
    padding: 1rem;
    position: fixed;
    ;
    /* Set the footer to absolute position */
    bottom: 0;
    left: 0;
    /* Position it at the bottom */
    width: 100%;
    z-index: 1;
    /* Ensure it's above other content */
    /* Make it full width */
}

/* Footer content styles */
.footer-content {
    display: flex;
    /* Display content and Instagram icon horizontally */
    align-items: center;
    /* Center vertically within the footer */
    justify-content: center;
    /* Center horizontally within the footer */
}

/* Instagram icon styles */
.instagram-link {
    text-decoration: none;
    color: #fff;
    /* Set the color to white */
    margin-left: 10px;
    /* Add spacing between the icon and other content */
}

/* Style the Instagram icon as needed */
/* Style the Instagram icon as needed */
.instagram-link svg {
    fill: #fff;
    transition: opacity 0.3s;
    /* Add a transition for the opacity property */
}

/* Change the opacity on hover */
.instagram-link:hover svg {
    opacity: 0.3;
    /* Change the opacity on hover */
    cursor: pointer;
}

